--- a/src/main/resources/org/uem/dam/dam2chat_psp_frontend/main-view.fxml
+++ b/src/main/resources/org/uem/dam/dam2chat_psp_frontend/main-view.fxml
@@ -4,11 +4,11 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<VBox alignment="CENTER" spacing="20.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/17.0.2-ea" fx:controller="org.uem.dam.dam2chat_psp_frontend.MainController">
+<VBox alignment="CENTER" spacing="20.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.uem.dam.dam2chat_psp_frontend.MainController">
     <padding>
         <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
     </padding>
-   <TextArea prefHeight="200.0" prefWidth="200.0" />
+   <TextArea fx:id="chatTextArea" editable="false" prefHeight="200.0" prefWidth="200.0" />
    <HBox>
       <children>
          <TextField fx:id="msgInputTxt" HBox.hgrow="ALWAYS" />
