--- a/src/main/resources/org/uem/dam/dam2chat_psp_frontend/main-view.fxml
+++ b/src/main/resources/org/uem/dam/dam2chat_psp_frontend/main-view.fxml
@@ -1,18 +1,48 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.TextArea?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
 
-<VBox alignment="CENTER" spacing="20.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.uem.dam.dam2chat_psp_frontend.MainController">
-    <padding>
-        <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
-    </padding>
-   <TextArea fx:id="chatTextArea" editable="false" prefHeight="200.0" prefWidth="200.0" />
-   <HBox>
+<VBox alignment="CENTER" style="-fx-background-color: white;" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.uem.dam.dam2chat_psp_frontend.MainController">
+   <Text strokeType="OUTSIDE" strokeWidth="0.0" text="User">
+      <font>
+         <Font name="System Bold" size="11.0" />
+      </font>
+   </Text>
+   <Text fill="#807b7b" strokeType="OUTSIDE" strokeWidth="0.0" text="online">
+      <font>
+         <Font size="9.0" />
+      </font>
+   </Text>
+   <TextArea fx:id="chatTextArea" editable="false" prefWidth="258.0" style="-fx-background-color: white;" />
+   <HBox style="-fx-background-color: white;">
       <children>
-         <TextField fx:id="msgInputTxt" HBox.hgrow="ALWAYS" />
-          <Button onAction="#onMsgSendButtonPressed" text="Enter" />
+         <TextField fx:id="msgInputTxt" prefHeight="20.0" prefWidth="175.0" promptText="message" HBox.hgrow="ALWAYS">
+            <HBox.margin>
+               <Insets left="10.0" right="10.0" top="5.0" />
+            </HBox.margin></TextField>
+          <Button contentDisplay="GRAPHIC_ONLY" onAction="#onMsgSendButtonPressed" style="-fx-background-color: white;" text="Enter">
+            <HBox.margin>
+               <Insets right="10.0" />
+            </HBox.margin>
+            <graphic>
+               <ImageView pickOnBounds="true" preserveRatio="true">
+                  <image>
+                     <Image url="@send_icon.png" />
+                  </image>
+               </ImageView>
+            </graphic></Button>
       </children>
    </HBox>
+   <padding>
+      <Insets bottom="10.0" />
+   </padding>
 </VBox>
