--- a/src/main/resources/org/uem/dam/dam2chat_psp_frontend/main-view.fxml
+++ b/src/main/resources/org/uem/dam/dam2chat_psp_frontend/main-view.fxml
@@ -1,35 +1,32 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.TextArea?>
-<?import javafx.scene.control.TextField?>
-<?import javafx.scene.image.Image?>
-<?import javafx.scene.image.ImageView?>
-<?import javafx.scene.layout.HBox?>
-<?import javafx.scene.layout.VBox?>
-<?import javafx.scene.text.Font?>
-<?import javafx.scene.text.Text?>
+<?import javafx.geometry.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.image.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 
-<VBox alignment="CENTER" style="-fx-background-color: white;" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.uem.dam.dam2chat_psp_frontend.MainController">
+
+<VBox alignment="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" style="-fx-background-color: white;" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.uem.dam.dam2chat_psp_frontend.MainController">
    <Text strokeType="OUTSIDE" strokeWidth="0.0" text="User">
       <font>
-         <Font name="System Bold" size="11.0" />
+         <Font name="System Bold" size="18.0" />
       </font>
    </Text>
    <Text fill="#807b7b" strokeType="OUTSIDE" strokeWidth="0.0" text="online">
       <font>
-         <Font size="9.0" />
+         <Font size="10.0" />
       </font>
    </Text>
-   <TextArea fx:id="chatTextArea" editable="false" prefWidth="258.0" style="-fx-background-color: white;" />
+   <TextArea fx:id="chatTextArea" editable="false" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefWidth="258.0" style="-fx-background-color: white;" />
    <HBox style="-fx-background-color: white;">
       <children>
          <TextField fx:id="msgInputTxt" prefHeight="20.0" prefWidth="175.0" promptText="message" HBox.hgrow="ALWAYS">
             <HBox.margin>
                <Insets left="10.0" right="10.0" top="5.0" />
-            </HBox.margin></TextField>
-          <Button contentDisplay="GRAPHIC_ONLY" onAction="#onMsgSendButtonPressed" style="-fx-background-color: white;" text="Enter">
+            </HBox.margin>
+         </TextField>
+          <Button contentDisplay="GRAPHIC_ONLY" defaultButton="true" onAction="#onMsgSendButtonPressed" style="-fx-background-color: white;" text="Enter">
             <HBox.margin>
                <Insets right="10.0" />
             </HBox.margin>
@@ -39,7 +36,8 @@
                      <Image url="@send_icon.png" />
                   </image>
                </ImageView>
-            </graphic></Button>
+            </graphic>
+         </Button>
       </children>
    </HBox>
    <padding>
