Implemented username update

--- a/src/main/resources/org/uem/dam/dam2chat_psp_frontend/main-view.fxml
+++ b/src/main/resources/org/uem/dam/dam2chat_psp_frontend/main-view.fxml
@@ -6,9 +6,8 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
 
-
 <VBox alignment="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" style="-fx-background-color: white;" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.uem.dam.dam2chat_psp_frontend.MainController">
-   <Text strokeType="OUTSIDE" strokeWidth="0.0" text="User">
+   <Text fx:id="nickTxt" strokeType="OUTSIDE" strokeWidth="0.0" text="User">
       <font>
          <Font name="System Bold" size="18.0" />
       </font>
